--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/user-event": "^13.5.0",
     "ffmpeg": "^0.0.4",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-resizable": "^3.0.4",
     "react-scripts": "5.0.1",
     "react-video-editor": "^1.0.2",
     "remotion": "^3.3.27",
