--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ffmpeg": "^0.0.4",
     "perfect-scrollbar": "^1.5.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-video-editor": "^1.0.2",
