--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.0",
     "react-draggable": "^4.4.5",
     "react-scripts": "5.0.1",
+    "react-tabs": "^3.2.3",
     "react-video-editor": "^1.0.2",
     "react-visjs-timeline": "^1.6.0",
     "remotion": "^3.3.27",
