--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-draggable": "^4.4.5",
     "react-resizable": "^3.0.4",
     "react-scripts": "5.0.1",
+    "react-tabs": "^4.2.1",
     "react-video-editor": "^1.0.2",
     "react-visjs-timeline": "^1.6.0",
     "recoil": "^0.7.6",
