--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.0.0",
     "react-draggable": "^4.4.5",
     "react-resizable": "^3.0.4",
+    "react-resizable-box": "^2.1.0",
     "react-scripts": "5.0.1",
     "react-video-editor": "^1.0.2",
     "react-visjs-timeline": "^1.6.0",
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jquery": "^3.6.3"
   }
 }
