--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "atoms": "^0.2.0",
     "body-parser": "^1.20.1",
     "ffmpeg": "^0.0.4",
+    "gh-pages": "^5.0.0",
     "perfect-scrollbar": "^1.5.5",
     "react": "^16.0.0",
     "react-dnd": "^16.0.1",
