--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.20.1",
     "ffmpeg": "^0.0.4",
     "perfect-scrollbar": "^1.5.5",
+    "re-resizable": "^6.9.9",
     "react": "^16.0.0",
     "react-dnd": "^16.0.1",
     "react-dom": "^16.0.0",
